1.1.0
-----

- New functions
 - PC_PCId(pcpoint|pcpatch)
 - PC_Get(pcpoint) returns float8[]
 - PC_Summary(pcpatch)
- Enhancements
 - Support sigbits encoding for 64bit integers (#61)
 - Warn about truncated values (#68)

1.0.0
-----

Initial release, also known as:
  - 0.1.0 (git tag v0.1.0)
  - 1.0 (extension script filename)
