@@ -391,6 +391,25 @@ SELECT Min(PC_PatchMin(pa,'z')) FROM pa_test_dim;
    1
 (1 row)
 
+-- https://github.com/pgpointcloud/pointcloud/issues/77
+SELECT PC_Get(PC_PatchMax(pa)) FROM pa_test_dim order by 1 limit 1;
+         pc_get         
+------------------------
+ {-123.01,48.99,399,39}
+(1 row)
+
+SELECT PC_Get(PC_PatchMin(pa)) FROM pa_test_dim order by 1 limit 1;
+       pc_get        
+---------------------
+ {-126.99,45.01,1,0}
+(1 row)
+
+SELECT PC_Get(PC_PatchAvg(pa)) FROM pa_test_dim order by 1 limit 1;
+      pc_get      
+------------------
+ {-125,47,200,20}
+(1 row)
+
 SELECT PC_Summary(pa) summary FROM pa_test_dim order by 1 limit 1;
                                                                                                                                                                                                                                               summary                                                                                                                                                                                                                                               
 ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
