@@ -5,6 +5,7 @@
  - PC_PCId(pcpoint|pcpatch)
  - PC_Get(pcpoint) returns float8[]
  - PC_Summary(pcpatch)
+ - PC_Patch{Min,Max,Avg}(pcpatch) returns pcpoint (#77)
 - Enhancements
  - Support sigbits encoding for 64bit integers (#61)
  - Warn about truncated values (#68)
